Bug fixes and Additions
Fixed a bug that was causing a graphical error on firefox and IE.
Fixed a bug where users could not click on the label in a form to activate the input field.
Added comments to the html and css files.
Changed the way the social media icons where styled to make them cross-browser and not hard coded.
Deleted bloat code.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,10 @@
-html {
-    min-height: 100vh;
-    background-image: url("../images/background/background.png");
-}
-
+/* Content section is always at least the hight of the screen with a negative margin the height of the footer plus it's border. */
 #content {
     min-height: 100vh;
     margin: 0 auto -88px;
+    background-image: url("../images/background/background.png");
 }
-
-#content::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-
-header {
-    width: 100%;
-    height: 80px;
-    background-color: white;
-    border-bottom: 4px solid #cccccc;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    margin-bottom: 40px;
-}
-
+/* Some basic definitions for headers on this site. */
 h1, h2 {
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-weight: bold;
@@ -39,6 +21,15 @@ h1 {
 h2 {
     font-size: 1.3em;
     padding-bottom: 25px;
+}
+/* The top bar header with navigation. */
+header {
+    width: 100%;
+    height: 80px;
+    background-color: white;
+    border-bottom: 4px solid #cccccc;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    margin-bottom: 40px;
 }
 
 header section {
@@ -76,23 +67,23 @@ nav {
     color: #999999;
     text-decoration: none;
 }
-
+/* The small vertical line separating the nav buttons. */
 #portButton a {
     border-left: 2px solid #efefef;
     border-right: 2px solid #efefef;
 }
-
+/* Sets the width and centers all the content below the header. */
 #bodyContent {
     width: 960px;
     margin: 0 auto;
 }
-
+/* Allows the body content section to grow with the main content section. */
 #bodyContent::after {
     content: "";
     display: block;
     clear: both;
 }
-
+/* Content displayed in the main box to the left of the screen. */
 #mainContent {
     width: 590px;
     padding: 40px 30px 40px 30px;
@@ -105,13 +96,12 @@ nav {
     font-size: 1.2em;
     line-height: 2em;
 }
-
+/* The following styles are specific to the about me page */
 #mainContent p {
     margin: 16px 0px 16px 0px;
     text-indent: 30px;
 }
 
-/* The following styles are specific to the about me page */
 #profilePic {
     width: 240px;
     height: 240px;
@@ -126,11 +116,11 @@ nav {
     cursor: pointer;
     transition: all .8s ease;
 }
-
+/* Make thumbnail larger when hovered. */
 .thumbnail:hover {
     transform: scale(1.1);
 }
-
+/* Maintains aspect ratio of image but does not allow image to be any wider than set amount of pixels. */
 .thumbnail img {
     max-width: 270px;
 }
@@ -142,10 +132,11 @@ nav {
 .right {
     float: right;
 }
-
+/* The label on the image. */
 .label {
     position: absolute;
     bottom: 20px;
+    left: 0px;
     height: 60px;
     line-height: 60px;
     width: 100%;
@@ -154,7 +145,6 @@ nav {
     font-size: 1.2em;
     background-color: rgba(74, 170, 165, .7);
 }
-
 /* The following styles are specific to the contact us page */
 textarea {
     resize: none;
@@ -179,7 +169,7 @@ input {
     padding: 8px 16px 8px 16px;
     cursor: pointer;
 }
-
+/* The following styles are for the sidebar on the right that is on all pages. */
 #sideBar {
     width: 210px;
     padding: 40px 30px 40px 30px;
@@ -191,8 +181,9 @@ input {
 #sideBar a {
     text-decoration: none;
 }
-
+/* Styles for the social icons link with opacity transition animation. */
 .socialIcon {
+    position: relative;
     display: inline-block;
     width: 60px;
     height: 60px;
@@ -200,70 +191,62 @@ input {
 }
 
 .socialIcon div {
+    position: absolute;
+    top: 0px;
+    left: 0px;
     width: 60px;
     height: 60px;
 }
 
-#gitHubIconTop {
-    position: absolute;
+#gitHubIconBlack {
     background-image: url("../images/icon/github_black.png");
     background-size: contain;
     transition: opacity .3s ease;
 }
 
-#gitHubIcon {
+#gitHubIconRed {
     background-image: url("../images/icon/github_red.png");
     background-size: contain;
 }
 
-#gitHubIconTop:hover {
+#gitHubIconBlack:hover {
     opacity: 0;
 }
 
-#linkedinIconTop {
+#middleIcon {
     margin: 0px 10px 0px 10px;
-    position: absolute;
+}
+
+#linkedinIconBlack {
     background-image: url("../images/icon/linkedin_black.png");
     background-size: contain;
     transition: opacity .3s ease;
 }
 
-#linkedinIcon {
-    margin: 0px 10px 0px 10px;
+#linkedinIconRed {
     background-image: url("../images/icon/linkedin_red.png");
     background-size: contain;
 }
 
-#linkedinIconTop:hover {
+#linkedinIconBlack:hover {
     opacity: 0;
 }
 
-#stackIconTop {
-    position: absolute;
-    transform: translateX(20px);
+#stackIconBlack {
     background-image: url("../images/icon/stackoverflow_black.png");
     background-size: contain;
     transition: opacity .3s ease;
-    z-index: 1;
 }
 
-#stackIcon {
-    position: relative;
-    right: -20px;
+#stackIconRed {
     background-image: url("../images/icon/stackoverflow_red.png");
     background-size: contain;
-    z-index: 0;
 }
 
-#stackIconTop:hover {
+#stackIconBlack:hover {
     opacity: 0;
 }
-
-#stackIcon:hover {
-    background-image: url("../images/icon/stackoverflow_red.png");
-    background-size: contain;
-}
-
+/* Height of the footer and height of the blank div that is added to the body to stop the footer from overlapping body content. */
 footer, .push {
     height: 80px;
 }
