--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     margin: 0 auto -88px;
     background-image: url("../images/background/background.png");
 }
+/* Returning the i tag to default after the reset.css file changed it. */
+i { 
+    font-style: italic;
+}
 /* Some basic definitions for headers on this site. */
 h1, h2 {
     font-family: 'Georgia', Times, Times New Roman, serif;
